@@ -964,4 +964,11 @@
 	  NOTE: On initial check-in, mmcsd_sdio.c and stm32_sdio.c are merely
 	  skeleton frameworks for the driver.
 
+	* fs/fs_mount.c -- Correct error handling logic.  If the bind() method
+	  fails, then a reserved node is left in the tree.  This causes subsequent
+	  attempts to mount at the location to fail (reporting that the node
+	  already exists).  This is a probably for block drivers for removable
+	  media: The bind method could fail repeatedly until media is asserted.
+
+
 
